# arpa_ethernet_motor

./: CMakeLists.txt  README.md  example_run.sh  package.xml  parker_hardware_interface.xml  setup.cfg  setup.py
RP2040_UDP_Motor_Controller/: RP2040_UDP_Motor_Controller.ino  settings.h
arpa_ethernet_motor/scripts/: EE_motor_node.py  PARKER_core.py  PARKER_motor_node.py  motor_node.py
hardware/pcb/Ethernet Motor Controller/: EthernetMotorController v1.1.PrjPcb  EthernetMotorController.PrjPcb  EthernetMotorController.PrjPcbStructure  EthernetMotorController.SchDoc
hardware/pcb/Ethernet Motor Controller/Gerber Files/: EthernetMotorController.EXTREP  EthernetMotorController.GBL  EthernetMotorController.GBO  EthernetMotorController.GBP  EthernetMotorController.GBS  EthernetMotorController.GD1  EthernetMotorController.GG1  EthernetMotorController.GM  EthernetMotorController.GTL  EthernetMotorController.GTO  EthernetMotorController.GTP  EthernetMotorController.GTS  EthernetMotorController.REP  EthernetMotorController.XLN  EthernetMotorController.apr  Status Report.Txt
include/arpa_ethernet_motor/: parker_core.hpp  parker_hardware_interface.hpp
src/: parker_core.cpp  parker_core_test  parker_hardware_interface.cpp  test_parker_core.cpp
